<resources>
    <string name="app_name">pertemuan4tugas</string>
    <string name="ac">AC</string>
    <string name="button_7">7</string>
    <string name="button_4">4</string>
    <string name="button_1">1</string>
    <string name="button_0">0</string>
    <string name="button_percent">%</string>
    <string name="button_8">8</string>
    <string name="button_5">5</string>
    <string name="button_2">2</string>
    <string name="penghitungan">15,000 - 7,500</string>
    <string name="hasil_perhitungan">7,500</string>
    <string name="divide">/</string>
    <string name="equals">=</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="times">X</string>
    <string name="point">.</string>
    <string name="button_3">3</string>
    <string name="button_6">6</string>
    <string name="button_9">9</string>
</resources>