<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75"
        />


    <!-- teks angka -->
    <TextView
        android:id="@+id/penghitungan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="20dp"
        android:text="@string/penghitungan"
        android:textColor="@color/grey"
        android:textSize="30sp"
        app:layout_editor_absoluteY="145dp"
        app:layout_constraintBottom_toTopOf="@id/hasil_penghitungan"
        app:layout_constraintEnd_toEndOf="parent"
         />
    <TextView
        android:id="@+id/hasil_penghitungan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:text="@string/hasil_perhitungan"
        android:textColor="@color/grey"
        android:textSize="65sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteY="174dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/line"
        />

    <ImageView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_horizontal_rule_24"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guideline1"
        />


<!--kolom1-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ac_button"
        android:layout_width="90dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guideline2"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline1"
        app:layout_constraintEnd_toEndOf="@id/vertical_guideline1"
        android:text="@string/ac"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:background="@color/orange"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_7"
        android:layout_width="90dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guideline3"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline2"
        app:layout_constraintEnd_toEndOf="@id/vertical_guideline1"
        android:text="@string/button_7"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/grey"
        android:background="@color/white"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_4"
        android:layout_width="90dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guideline4"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline3"
        app:layout_constraintEnd_toEndOf="@id/vertical_guideline1"
        android:text="@string/button_4"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/grey"
        android:background="@color/white"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_1"
        android:layout_width="90dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guideline5"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline4"
        app:layout_constraintEnd_toEndOf="@id/vertical_guideline1"
        android:text="@string/button_1"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/grey"
        android:background="@color/white"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_0"
        android:layout_width="195dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guideline6"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline5"
        app:layout_constraintEnd_toEndOf="@id/vertical_guideline2"
        android:text="@string/button_0"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/grey"
        android:background="@color/white"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        />

<!--kolom 2-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_percent"
        android:layout_width="90dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guideline2"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline1"
        app:layout_constraintEnd_toEndOf="@id/vertical_guideline2"
        android:text="@string/button_percent"
        android:textSize="40sp"
        android:textColor="@color/orange"
        android:background="@color/white"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_8"
        android:layout_width="90dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guideline3"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline2"
        app:layout_constraintEnd_toEndOf="@id/vertical_guideline2"
        android:text="@string/button_8"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/grey"
        android:background="@color/white"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_5"
        android:layout_width="90dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guideline4"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline3"
        app:layout_constraintEnd_toEndOf="@id/vertical_guideline2"
        android:text="@string/button_5"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/grey"
        android:background="@color/white"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_2"
        android:layout_width="90dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guideline5"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline4"
        app:layout_constraintEnd_toEndOf="@id/vertical_guideline2"
        android:text="@string/button_2"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/grey"
        android:background="@color/white"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        />

<!--kolom 3-->
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="90dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guideline2"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline1"
        app:layout_constraintEnd_toEndOf="@id/vertical_guideline3"
        android:text="@string/divide"
        android:textSize="40sp"
        android:textColor="@color/orange"
        android:background="@color/white"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="90dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guideline3"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline2"
        app:layout_constraintEnd_toEndOf="@id/vertical_guideline3"
        android:text="@string/button_9"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/grey"
        android:background="@color/white"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="90dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guideline4"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline3"
        app:layout_constraintEnd_toEndOf="@id/vertical_guideline3"
        android:text="@string/button_6"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/grey"
        android:background="@color/white"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="90dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guideline5"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline4"
        app:layout_constraintEnd_toEndOf="@id/vertical_guideline3"
        android:text="@string/button_3"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/grey"
        android:background="@color/white"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="90dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guideline6"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline5"
        app:layout_constraintEnd_toEndOf="@id/vertical_guideline3"
        android:text="@string/point"
        android:textSize="30sp"
        android:textColor="@color/orange"
        android:background="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        />

<!--kolom 4-->
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="90dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guideline2"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline1"
        app:layout_constraintStart_toEndOf="@id/vertical_guideline3"
        android:text="@string/times"
        android:textSize="30sp"
        android:textColor="@color/orange"
        android:background="@color/white"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="90dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guideline3"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline2"
        app:layout_constraintStart_toEndOf="@id/vertical_guideline3"
        android:text="@string/plus"
        android:textSize="40sp"
        android:textColor="@color/orange"
        android:background="@color/white"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="90dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guideline4"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline3"
        app:layout_constraintStart_toEndOf="@id/vertical_guideline3"
        android:text="@string/minus"
        android:textSize="40sp"
        android:textColor="@color/orange"
        android:background="@color/white"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="90dp"
        android:layout_height="125dp"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guideline6"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline4"
        app:layout_constraintStart_toEndOf="@id/vertical_guideline3"
        android:text="@string/equals"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:background="@color/orange"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>